--- a/sendblessing/index.html
+++ b/sendblessing/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_701634_2fkbh1s36h4.css" />
-		<title>sendblessing</title>
+		<title>FANFAN星球</title>
 		
 	</head>
 
