--- a/zhengshu.page/step2.html
+++ b/zhengshu.page/step2.html
@@ -350,7 +350,7 @@
                         <div class="item" v-for="(item,index) in  curPathArr" :class="{
                                                 'active':index=== 0
                                               }">
-                            <img :src="item.path" />
+                            <img :src="item.path" style="height:400px" />
                         </div>
                     </div>
                 </div>
@@ -409,7 +409,8 @@
             muBanIndex: 0,
             curPathArr: [],
             ganXiePath: [{
-                path: "./images/681562760272.png"
+                //path: "./images/681562760272.png"
+                path: "./images/1578838405712.png"
             }],
             juanZengPath: [{
                 path: "./images/jz.jpg"
